#ifndef DIRECTION_H
#define DIRECTION_H

enum direction {
    EAST = 0,
    NORTH = 1,
    WEST = 2,
    SOUTH = 3
};

#endif /* DIRECTION_H */
